lang.bnf

<identifier> = /[a-z][a-z0-9_]*/

<intLiteral> = /0|[1-9][0-9]+/
<floatLiteral> = <intLiteral> "." /[0-9]*[1-9]/
<booleanLiteral> = "true" | "false"
<Literal> = <intLiteral> | <floatLiteral> | <booleanLiteral>

<varType> = "int" | "float" | "boolean"

<program> = [<varChapter>]  <goChapter>

<varChapter> = "VAR" "{" <varDecl> {"," <varDecl>} "}"
<varDecl> = <identifier> ":" <varType>

<goChapter> = "GO" <block>
<block> = "{" { <statement> }"}"
<statement> = <ifStatement> | <whileStatement> | <assignmentStatement> 

<assignmentStatement> = <identifier> "=" <booleanExpression> ";"

<booleanExpression> = <booleanTem> { "or" <booleanTerm>}
<booleanTerm> = <booleanRelation> { "and" <booleanRelation>}
<booleanRelation> = <mathExpression> [ ("=="|"!="|">"|"<"|">="|"<=") <mathExpression>]
<mathExpression> = <mathTerm> {("+"|"-") <mathTerm>}
<mathTerm> = <mathPow> { ("*"|"/") <mathPow>}
<mathPow> = <operand> { "**" <operand> }
<operand> = <identifier> | <Literal> | "(" <booleanExpression> ")" 


<ifStatement> = "if" "(" <booleanExpression> ")" <block> [ "else" <block> ]
<whileStatement> = "while" "(" <booleanExpression> ")" <block>
